--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
-title: [Qianqian Wang's Website]
-description: [Welcome to my website!]
+title: Qianqian Wang
+description: Welcome to my website!
+show_downloads: false
+logo: logo.jpeg
