--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-minimal
 title: Qianqian Wang
 description: Welcome to my website!
 show_downloads: false
-logo: logo.jpeg
+logo: logo.jpg
