--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ title: Qianqian Wang
 description: Welcome to my website!
 show_downloads: false
 logo: logo.jpg
-github:
-  is_project_page: false
++ github:
++  is_project_page: false
