--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 theme: jekyll-theme-minimal
 title: Qianqian Wang
 description: Welcome to my website!
+show_downloads: false
 logo: logo.jpg
 github:
   is_project_page: false
