--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Qianqian Wang
-description: Welcome to my website!
+description: Welcome to my website! Ph.D. Cadidate in Micro-/nano-robotics, Department of Mechanical and Automation Engineering, The Chinese University of Hong Kong. Email: qqwang@mae.cuhk.edu.hk
 show_downloads: false
 logo: logo.jpg
 github:
